--- a/style.css
+++ b/style.css
@@ -3,15 +3,19 @@ body {
   background: rgb(147,148,152);
   background: linear-gradient(0deg, rgba(147,148,152,1) 0%, rgba(60,69,126,1) 100%);
   color:rgba(60,69,126,1);
-  font-size: 16;
+  font-size: 16px;
   line-height: 1;
   text-align: center;
 }
-
-h1, h2, h3 {
+h1 {
   font-family: 'Roboto', sans-serif;
   color:rgb(35, 40, 73);
-  font-size: 16;
+  font-size: 40px;
+}
+h2, h3 {
+  font-family: 'Roboto', sans-serif;
+  color:rgb(35, 40, 73);
+  font-size: 32px;
 }
 
 a {
