make my profile prettier

--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@ body {
   font-family: 'Open Sans', sans-serif;
   background: rgb(147,148,152);
   background: linear-gradient(0deg, rgba(147,148,152,1) 0%, rgba(60,69,126,1) 100%);
-  color:rgba(60,69,126,1);
+  color:rgb(16, 18, 32);
   font-size: 16px;
   line-height: 1;
   text-align: center;
 }
 h1 {
   font-family: 'Roboto', sans-serif;
-  color:rgb(35, 40, 73);
+  color:rgb(16, 18, 32);
   font-size: 40px;
 }
 h2, h3 {
   font-family: 'Roboto', sans-serif;
-  color:rgb(35, 40, 73);
+  color:rgb(16, 18, 32);
   font-size: 32px;
 }
 
@@ -32,7 +32,7 @@ a:hover {
   width: 600px;
   margin: 32px auto;
   padding: 24px;
-  background-color: #f6f8f8;
+  background-color:#d6d6d6;
   box-shadow: 0 0 16px rgb(0 0 0 / 60%);
   text-align: center;
   border-radius: 6px;
