--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ a:hover {
   width: 200px;
   height: 200px;
   border-radius: 50%;
+  box-shadow: 0 0 16px rgb(0 0 0 / 60%);
 }
 .card-img{
   width: 400px;
